# secrets-storage

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/skills/release-version/: SKILL.md
.github/workflows/: ci.yml  release.yml
.specs/codebase/: TESTING.md
.specs/features/crypto-format/: design.md  review-plan.md  spec.md  tasks.md
.specs/features/local-sessions/: design.md  spec.md  tasks.md
.specs/features/secret-management/: design.md  secret-management-architecture-flowchart.mmd  secret-move-sequence.mmd  spec.md  tasks-core-flowchart.mmd  tasks-ui-flowchart.mmd  tasks.md
.specs/features/secure-vault/: context.md  spec.md  threat-model.md  trust-boundaries-flowchart.mmd
.specs/features/ui-screens/: context.md  design.md  spec.md  tasks.md
.specs/features/windows-tauri-proof/: design.md  lock-lifecycle-sequence.mmd  security-boundary-flowchart.mmd  spec.md  tasks-authority-flowchart.mmd  tasks-evidence-flowchart.mmd  tasks-foundation-flowchart.mmd  tasks.md
.specs/project/: PROJECT.md  RELEASES.md  ROADMAP.md  STATE.md
e2e/security-proof/: authority.e2e.ts  vite.config.ts  wdio.conf.ts
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: new-release.ps1
scripts/security/: assert-effective-config.ps1
scripts/security/tests/: assert-effective-config.tests.ps1
src/: App.test.ts  App.vue  fixtures.ts  style.css  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.security-proof.conf.json
src-tauri/capabilities/: default.json  security-proof.json
src-tauri/permissions/autogenerated/: proof_authorized_probe.toml  proof_install_canary.toml  proof_lock.toml  proof_status.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crypto/: aead.rs  codec.rs  envelope.rs  error.rs  kdf.rs  keyring.rs  keys.rs  mod.rs  secret.rs  vectors.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/windows/: clipboard.rs  events.rs  mod.rs
src-tauri/src/proof/: commands.rs  mod.rs
src-tauri/src/secrets/: clipboard.rs  codec.rs  mod.rs  model.rs  move_state.rs  service.rs  session_access.rs
src-tauri/src/security/: diagnostics.rs  lock.rs  memory.rs  mod.rs
src-tauri/src/session/: commands.rs  error.rs  manager.rs  mod.rs  model.rs  storage.rs  tests.rs
src-tauri/src/sessions/: app_lock.rs  attempts.rs  commands.rs  manager.rs  mod.rs  model.rs  registry.rs
src-tauri/src/storage/: atomic_vault.rs  mod.rs
src-tauri/tests/: local_sessions.rs  secret_management.rs  security_proof_commands.rs  windows_secret_platform.rs  windows_security_proof.rs  windows_sensitive_memory.rs
src/router/: index.ts
src/security-proof/: SecurityProofHarness.test.ts  SecurityProofHarness.vue  index.html  main.ts  vite-config.test.ts
src/stores/: vault.test.ts  vault.ts
src/utils/: password.ts
(+49 files in other folders)
