[package]
name = "secrets-storage"
version = "0.1.7"
description = "Local-first, zero-knowledge secrets vault"
authors = ["Enzo Yuji Wu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "secrets_storage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Enabled only by the release pipeline, which also injects the
# `plugins.updater` overlay (pubkey/endpoints). Local dev/build must NOT
# register the updater plugin, otherwise it panics on the missing config.
updater = ["dep:tauri-plugin-updater"]
# Compila somente o harness isolado da prova Windows/Tauri.
# Builds normais e de release não habilitam esta feature.
security-proof = []

[dependencies]
serde_json = "1"
tauri = { version = "2", default-features = false, features = ["wry"] }

# Crypto core (candidatos do design crypto-format; params PT-01/PT-02 provisórios)
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = "1"
getrandom = "0.2"
ciborium = "0.2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security_Cryptography",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Power",
  "Win32_System_RemoteDesktop",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2", optional = true }

[dev-dependencies]
tauri = { version = "2", default-features = false, features = ["test", "wry"] }
